project/k8s/broker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-service
  labels:
    app: broker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker-service
  template:
    metadata:
      labels:
        app: broker-service
    spec:
      containers:
      - name: broker-service
        image: "37935587/broker-service:1.0.0"
        # purely descriptive
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker-service
  ports:
    - protocol: TCP
      name: main-port
      port: 8080
      targetPort: 8080
