project/k8s/mail.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailer-service
  template:
    metadata:
      labels:
        app: mailer-service
    spec:
      containers:
      - name: mailer-service
        image: "37935587/mail-service:1.0.0"
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mailer-service
spec:
  selector:
    app: mailer-service
  ports:
    - protocol: TCP
      name: main-port
      port: 80
      targetPort: 80
